Prevent the badge from wrapping long titles
`pressbook-green` is an example of a theme where the title got wrapped by the badge's `flex-basis`

--- a/client/my-sites/theme/style.scss
+++ b/client/my-sites/theme/style.scss
@@ -223,11 +223,8 @@ $button-border: 4px;
 	}
 
 	.theme__sheet-main-info-type {
+		flex-basis: unset;
 		margin-left: 8px;
-
-		&.is-soft-launched {
-			flex-basis: unset;
-		}
 	}
 
 	.theme__sheet-main-info-tag {
